create matrix element for items which are not showing up in itemDrops (quantity will be 0)